fix action dropdown in nested table

--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -210,7 +210,7 @@ ng-component{
         width: 40px;
     }
     td:not(.dropdown) .ui-cell-data,
-    td:not(.dropdown) span {
+    td:not(.dropdown) > span {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
