--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -65,9 +65,9 @@
                                     <i class="fa fa-times"></i>
                                 </button>
                             </div>
-                            <button class="btn btn-plain filterSubmit" >
+                            <!-- <button class="btn btn-plain filterSubmit" >
                                 <i class="fa fa-arrow-right"></i>
-                            </button>
+                            </button> -->
                           
                         </div>
                     </span>
