--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -50,7 +50,7 @@
                 <th style="width: 2.25em" *ngIf="element.config?.uiStyles?.attributes?.rowSelection"></th>
                 <th style="width: 2.25em" *ngIf="element.config?.uiStyles?.attributes?.expandableRows"></th>
                 <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
-                    <th *ngIf="col.uiStyles.attributes?.hidden == false">
+                    <th *ngIf="col?.uiStyles?.attributes?.hidden == false">
                         <span *ngIf="col?.uiStyles?.attributes?.filter">
                             <div class="filterHolder" *ngIf="isDate(col.type.name)">
                                 <input #text type="text" [(ngModel)]="filterState[colIndex]" (input)="dateFilter($event, dt, col.field, col?.uiStyles?.attributes?.filterMode, col?.uiStyles?.attributes?.datePattern, col?.type?.name)">
@@ -89,7 +89,7 @@
                 </td>
 
                 <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
-                    <td *ngIf="col.uiStyles.attributes?.hidden == false" [ngClass]="{dropdown:showLinkMenu(col)}">
+                    <td *ngIf="col?.uiStyles?.attributes?.hidden == false" [ngClass]="{dropdown:showLinkMenu(col)}">
                         <span title="{{getCellDisplayValue(rowData, col)}}" *ngIf="showValue(col)">{{getCellDisplayValue(rowData, col)}}</span>
                         <span *ngIf="showLinkMenu(col)">
                                 <nm-action-dropdown #dropDown [element]="getLinkMenuParam(col, rowData['elemId'])" 
