--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -305,7 +305,9 @@ p-checkbox.ng-dirty.ng-invalid .ui-chkbox-box {
     .ui-radiobutton-box.ui-state-disabled,
     .ui-radiobutton-box.ui-state-disabled:hover,
     .ui-chkbox-box.ui-state-disabled,
-    .ui-chkbox-box.ui-state-disabled:hover {
+    .ui-chkbox-box.ui-state-disabled:hover,
+    .ui-chkbox-box.ui-state-active.ui-state-disabled, 
+    .ui-radiobutton-box.ui-state-disabled.ui-state-active {
         border-color: #b9b6b6;
         background: #d4d4d4;
         opacity: 1;
@@ -357,4 +359,17 @@ p-checkbox.ng-dirty.ng-invalid .ui-chkbox-box {
             box-shadow: none;
         }
     }
+}
+.ui-timepicker.ui-widget-header {
+    background: #c8e3f6;
+    color: #696b6c;
+}
+.ui-timepicker a > span {
+    color: #006bc2;
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+.ui-datepicker.ui-widget .ui-timepicker {
+    text-align: right;
+    padding-right: 2rem;
 }
