--- a/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.multigrid.scss
@@ -113,9 +113,8 @@ ng-component{
 
         .filterHolder{
             position: relative;
-            margin-top: 6px;
             display:inline-block;
-            width: 80%;
+            width: 70%;
             input{
                 width: 100%;
             }
@@ -134,7 +133,14 @@ ng-component{
             }
         }
         .filterSubmit{
-            padding: .7rem .3rem 0;
+            padding: .2rem .3rem 0;
+            line-height: 1.3;
+            background: #fff;
+            color: #e5991c;
+            &:hover, &:focus{
+                background: #4a90e2;
+                color: #fff;
+            }
         }
         .gridFilterIcon {
             position:absolute;
