update table pagination and header

--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -21,7 +21,7 @@
         [totalRecords]=totalRecords
         [paginator]="element.config?.uiStyles?.attributes?.pagination" 
         paginatorPosition="both" 
-        [alwaysShowPaginator]="true"
+        [alwaysShowPaginator]="false"
         (sortFunction)="customSort($event)" 
         [customSort]="true" 
         [responsive]="true" 
