--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -15,7 +15,9 @@ body{color:#4c4c4c;}
 .text-bold {
     font-weight: bold;
 }
-
+.ui-table .ui-table-thead > tr > th > span.overflowVisible,.overflowVisible {
+    overflow: visible;
+}
 html {
     font-size: 12px;
     line-height: 15px;
@@ -181,7 +183,9 @@ h1.page-title {
 .filterIcon::before{
     content: "\F0b0";
 }
-
+.clinicalInfoIcon::before{
+    content: "\F0fa";
+}
 .col-xs-12 {
     margin: 0 0; //override correction for inline-block fix
 }
@@ -529,9 +533,14 @@ $answerWidth: 99%-$questionWidth;
     .ui-dropdown label:first-of-type, .ui-dropdown label {
         margin: 1px 0 0 0;
     }
-    input, .select-wrapper, textarea {
+    input {
         margin-left: 20px;
         max-width: 300px;
+        width: 100%;
+    }
+    textarea {
+        margin-left: 20px;
+        max-width: 800px;
         width: 100%;
     }
   
@@ -557,6 +566,25 @@ $answerWidth: 99%-$questionWidth;
     }
     .warningMsg {
         margin-left: 0px;
+    }
+}
+
+.ui-messages .fa-2x {
+    font-size: 1.3rem;
+}
+.form-group .ui-messages-error, .form-group .ui-messages-warn {
+    background: none;
+    border: none;
+    padding: 0;
+    margin-left: 20px;
+}
+.ui-messages-warn {
+    color: #e5991c;
+}
+.ui-messages-error{
+    color: #a94442;
+    .fa-close::before{
+        content:"\F071";
     }
 }
 .iconField {
