--- a/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.form.components.scss
@@ -373,3 +373,14 @@ p-checkbox.ng-dirty.ng-invalid .ui-chkbox-box {
     text-align: right;
     padding-right: 2rem;
 }
+
+input.custom-control-input:disabled ~ .custom-control-description {
+    color: #4c4c4c;
+}
+input.custom-control-input:disabled ~ .custom-control-indicator,
+.custom-check .custom-control-input:checked:disabled ~ .custom-control-indicator {
+    border-color: #b9b6b6;
+        background: #d4d4d4;
+        opacity: 1;
+        color: #4c4c4c;
+}
