--- a/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.contentarea.scss
@@ -530,8 +530,12 @@ $answerWidth: 99%-$questionWidth;
     .form-checkrow label, .form-checkrow label:first-of-type {
         margin-bottom: 0;
     }
-    .ui-dropdown label:first-of-type, .ui-dropdown label {
-        margin: 1px 0 0 0;
+    .ui-dropdown {
+        margin-left: 20px;
+         label:first-of-type, 
+         .ui-dropdown label {
+            margin: 1px 0 0 0;
+        }
     }
     input {
         margin-left: 20px;
