--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -67,7 +67,7 @@
                             </div>
                             <div *ngIf="!isDate(col?.type?.name)" >
                                 <div class="filterHolder">
-                                <input #text type="text" pInputText pKeyFilter="{{getPattern(col?.type?.name)}}" [(ngModel)]="filterState[colIndex]" (input)="inputFilter($event, dt, col.field, col?.uiStyles?.attributes?.filterMode)">
+                                <input #text type="text" pInputText [pKeyFilter]="getPattern(col?.type?.name)" [(ngModel)]="filterState[colIndex]" (input)="inputFilter($event, dt, col.field, col?.uiStyles?.attributes?.filterMode)">
                                 <button (click)="clearFilter(text, dt, col.field); filterState[colIndex]=''">
                                     <i class="fa fa-times"></i>
                                 </button>
