--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -15,8 +15,9 @@
         </div>
     </div>
 
-    <p-table #dt [value]="value" [columns]="params" dataKey="id"
-        [(selection)]="selectedRows" 
+    <p-table #dt [value]="value" [columns]="params" 
+        [dataKey]="element.config?.uiStyles?.attributes?.dataKey"
+        [(selection)]="selectedRows"
         [rows]="element.config?.uiStyles?.attributes?.pageSize"
         [totalRecords]=totalRecords
         [paginator]="element.config?.uiStyles?.attributes?.pagination" 
@@ -37,7 +38,7 @@
                 </th>
                 <th style="width: 2.25em" *ngIf="element?.config?.uiStyles?.attributes?.expandableRows"></th>
                 <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
-                    <th *ngIf="col?.uiStyles?.attributes?.hidden == false" [pSortableColumn]="col" [ngClass]="{dropdown:showLinkMenu(col)}">
+                    <th *ngIf="showHeader(col)" [pSortableColumn]="col" [ngClass]="{dropdown:showLinkMenu(col)}">
                         <span *ngIf="showValue(col)">
                             {{col.header}}
                             <p-sortIcon [field]="col" *ngIf="col?.uiStyles?.attributes?.sortable !== false"></p-sortIcon>
@@ -64,9 +65,9 @@
                                     <i class="fa fa-times"></i>
                                 </button>
                             </div>
-                            <div *ngIf="!isDate(col.type.name)" >
+                            <div *ngIf="!isDate(col?.type?.name)" >
                                 <div class="filterHolder">
-                                    <input #text type="text" [(ngModel)]="filterState[colIndex]" (input)="inputFilter($event, dt, col.field, col?.uiStyles?.attributes?.filterMode)">
+                                <input #text type="text" pInputText [pKeyFilter]="getPattern(col?.type?.name)" [(ngModel)]="filterState[colIndex]" (input)="inputFilter($event, dt, col.field, col?.uiStyles?.attributes?.filterMode)">
                                 <button (click)="clearFilter(text, dt, col.field); filterState[colIndex]=''">
                                     <i class="fa fa-times"></i>
                                 </button>
@@ -83,19 +84,19 @@
         </ng-template>
 
         <ng-template pTemplate="body" let-rowData let-columns="columns" let-expanded="expanded">
-            <tr>
+            <tr [pSelectableRow]="rowData">
                 <td *ngIf="element.config?.uiStyles?.attributes?.rowSelection">
                     <p-tableCheckbox [value]="rowData"></p-tableCheckbox>
                 </td>
-                <td *ngIf="element.config?.uiStyles?.attributes?.expandableRows">
 
+                <td *ngIf="element.config?.uiStyles?.attributes?.expandableRows">
                     <a href="#" [pRowToggler]="rowData" *ngIf=isRowExpanderHidden(rowData) >
                         <i [ngClass]="expanded ? 'fa fa-fw fa-chevron-circle-down ui-row-toggler' : 'fa fa-fw fa-chevron-circle-right ui-row-toggler'"></i>
                     </a>
                 </td>
 
                 <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
-                    <td *ngIf="col?.uiStyles?.attributes?.hidden == false" [ngClass]="{dropdown:showLinkMenu(col)}">
+                    <td *ngIf="showHeader(col)" [ngClass]="{dropdown:showLinkMenu(col)}">
                         <span title="{{getCellDisplayValue(rowData, col)}}" *ngIf="showValue(col)">{{getCellDisplayValue(rowData, col)}}</span>
                         <span *ngIf="showLinkMenu(col)">
                                 <nm-action-dropdown #dropDown [element]="getLinkMenuParam(col, rowData['elemId'])" 
@@ -112,8 +113,16 @@
 
         <ng-template pTemplate="rowexpansion" let-rowData>
             <tr>
-                <td [attr.colspan]="columnsToShow + 1">
+                <td [attr.colspan]="columnsToShow">
                     <nm-section *ngIf="rowData.nestedElement" [element]="rowData.nestedElement"></nm-section>
+                </td>
+            </tr>
+        </ng-template>
+
+        <ng-template pTemplate="emptymessage" let-columns>
+            <tr>
+                <td [attr.colspan]="columnsToShow">
+                    No records found
                 </td>
             </tr>
         </ng-template>
