--- a/nimbus-ui/nimbusui/src/app/components/domain/domain-flow.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/domain/domain-flow.component.html
@@ -14,7 +14,7 @@
 	        <span class="navbar-toggler-icon"></span> 
 	    </button>
 	    <div aria-expanded="false" class="navbar-collapse nav-block collapse" id="navbarToggler">
-			<a class="nav-link {{menuItem.image}}" [routerLink]="[menuItem.path, {link:true}]" *ngFor="let menuItem of leftMenuItems" routerLinkActive="active">
+			<a class="nav-link {{menuItem.image}}" [routerLink]="[menuItem.path]" *ngFor="let menuItem of leftMenuItems" routerLinkActive="active">
 				{{menuItem.title}}
 			</a>
 	    </div>
