accordion expand all/ collapse all, scroll to top and grid selections

--- a/nimbus-ui/nimbusui/src/app/app.component.html
+++ b/nimbus-ui/nimbusui/src/app/app.component.html
@@ -1,2 +1,8 @@
 <router-outlet></router-outlet>
+<div class="scroll-to-top" [ngClass]="{'show-scroll': navIsFixed}">
+    <button title="Scroll to top of page" (click)="scrollToTop()" class="btn-plain btn" 
+        style="background: rgb(171, 171, 171); color: black; padding: 0 0.4rem;">
+        <i aria-hidden="true" class="fa fa-angle-up" style="font-size: 2rem;"></i>
+    </button>
+</div>
 <app-loader></app-loader>
