page header title

--- a/nimbus-ui/nimbusui/src/app/components/login/login-layout.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/login/login-layout.component.html
@@ -2,7 +2,7 @@
 	<nm-link [element]="branding.logo" *ngIf="branding.logo"></nm-link>        
     <div class=" productName d-inline-block ml-2 pt-1">
 		<div class="sizeTarget">
-            <nm-link [element]="branding.title" *ngIf="branding.title"></nm-link>
+            <nm-link [element]="branding.appTitle" *ngIf="branding.appTitle"></nm-link>
         </div>
     </div>
     <div class="headerMenu hidden-sm-down col-sm-6 col-md-7 col-xl-8 pull-right">
