--- a/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
@@ -17,9 +17,7 @@
                     <span class="tag" *ngIf="messageCount > 0"> {{messageCount}}</span>
                 </a>
 
-                <!-- <ng-template [element]="branding.title" *ngIf="branding.title == 'Long Term Services Supports(LTSS)'"> -->
-                 <a href="#" class="fa-icon-link settings mr-2" *ngIf="branding?.settings"></a> 
-                <!-- </ng-template> -->
+                <a href="#" class="fa-icon-link settings mr-2" *ngIf="branding?.settings"></a> 
 
             </div>
         </div>
@@ -40,7 +38,7 @@
 
     <div class="col-lg-6 col-md-3 col-sm-3 hidden-xs-down p-0 ml-3 mt-1 ">
         <div class="productName hidden-xs-down d-inline-block">
-            <nm-paragraph [element]="branding.title" *ngIf="branding.title"></nm-paragraph>
+            <nm-paragraph [element]="branding.appTitle" *ngIf="branding.appTitle"></nm-paragraph>
             <div class="subTitle" *ngIf="branding.subTitle">
                 <nm-paragraph [element]="branding.subTitle"></nm-paragraph> 
             </div>
