make sslcert optional

--- a/nimbus-ui/nimbusui/src/app/components/platform/footer/footer-global.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/footer/footer-global.component.html
@@ -15,7 +15,7 @@
                 <a [href] = "p.param.config.url" >{{p.param.config.code}}</a>
             </li> -->
         </ul>
-        <ul *ngIf="footerConfig">
+        <ul *ngIf="footerConfig && footerConfig.sslCert">
             <li>
                 <nm-link [element]="footerConfig.sslCert"></nm-link>
             </li>
