NIM-14739: Editing data mapped to expanded row content fails to correctly refresh UI

--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -26,7 +26,7 @@
         (sortFunction)="customSort($event)" 
         [customSort]="true" 
         [responsive]="true" 
-        (onRowExpand)="getAddtionalData($event)"
+        (onRowExpand)="onRowExpand($event)"
         (onPage)="paginate($event)"
         (onFilter)="filterCallBack($event)"
         [lazy]=element.config?.uiStyles?.attributes?.lazyLoad
