--- a/nimbus-ui/nimbusui/src/assets/scss/_a.globalNav.scss
+++ b/nimbus-ui/nimbusui/src/assets/scss/_a.globalNav.scss
@@ -183,7 +183,7 @@
 
 
 
-@media(min-width: 576px) {
+@media screen and (min-width: 576px) {
  
 }
 
@@ -198,16 +198,14 @@
 }
 
 
-@media(min-width: 768px) {
-
-    
+@media screen and (min-width: 768px) {
     
 }
 
-@media (min-width: 992px) {
+@media screen and (min-width: 992px) {
     
 }
-@media(min-width: 1300px) {
+@media screen and (min-width: 1300px) {
    
 }
 
